refactored david's code, use this version for further development